# tty_ov

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  requirements copy.txt  requirements.build.txt  requirements.txt  setup.py  tty_ov.code-workspace
.github/workflows/: document_generator.yaml  publish_locally.yaml  publish_localy.yaml  publish_packages.yaml  python-package.yml  run_unit_tests.yaml  test-python-package.yml
doxygen_generation/: Doxyfile  make_documentation.sh
doxygen_generation/html/: header.html
doxygen_generation/latex/stylesheet/: stylesheet.tex
doxygen_generation/local_dev/: docker-compose.yaml
doxygen_generation/rtf/stylesheet/: stylesheet.rtf
tests/: test_ask_question.py  test_tty_ov.py
tty_ov/: __init__.py  __main__.py  hl_ls.py  requirements.txt  tty_ov.py
